[tool.poetry]
name = "pyloopenergy"
version = "0.2.0"
description = "Access Loop Energy energy monitors via Socket.IO API"
authors = ["Greg Dowling <mail@gregdowling.com>"]
license = "MIT"

readme = 'README.md'

repository = "http://github.com/pavoni/pyloopenergy"
homepage = "http://github.com/pavoni/pyloopenergy"

keywords = ['loopenergy', 'api']

[tool.poetry.dependencies]
python = "^3.6 || ^3.7"
requests = ">=2.0"
python-socketio = "v4.6.0"

[tool.poetry.dev-dependencies]
flake8-docstrings = ">=1.3.0"
flake8 = ">=3.6.0"
mypy = ">=0.650"
pydocstyle = "3.0.0"
pylint = "==2.4.3"
pytest = "==5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
